test/src/errors/commands/unhandled-exception.command.ts
export class UnhandledExceptionCommand {
  constructor(public readonly failAt: 'command' | 'event' | 'saga') {}
}
